--- a/2023_12_21_Examen_final.ipynb
+++ b/2023_12_21_Examen_final.ipynb
@@ -565,7 +565,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [
         {
@@ -583,7 +583,7 @@
               "        "
             ],
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x25295b1e720>"
+              "<IPython.lib.display.IFrame at 0x2528e7c7e60>"
             ]
           },
           "metadata": {},
@@ -597,58 +597,83 @@
         "import pandas as pd\n",
         "import plotly.express as px\n",
         "\n",
-        "# Cargar el conjunto de datos\n",
+        "# Load the dataset\n",
         "df = pd.read_csv('bank-full.csv', sep=';')\n",
         "\n",
-        "# Inicializar la aplicación Dash\n",
+        "# Initialize the Dash application\n",
         "app = dash.Dash(__name__)\n",
         "\n",
-        "# Definir el diseño\n",
+        "# Define the layout\n",
         "app.layout = html.Div([\n",
-        "    html.H1('Dashboard para el marketing del banco'),\n",
+        "    html.H1(' Dashboard del bank marketing', style={'background-color': 'skyblue', 'padding': '10px', 'border-radius': '10px'}),\n",
+        "    html.Div([\n",
+        "        html.H2(\"Distribución por edades\", style={'textAlign': 'center',  'color': 'white'}),\n",
+        "    ], style={'padding': '10px', 'border-radius': '10px'}),\n",
         "    \n",
         "    html.Div([\n",
-        "        # Lista desplegable para seleccionar la edad\n",
+        "        # Dropdown to select age\n",
         "        dcc.Dropdown(\n",
-        "            id='edad',\n",
+        "            id='age-dropdown',\n",
         "            options=[{'label': str(age), 'value': age} for age in df['age'].unique()],\n",
-        "            value=df['age'].min(),  # Valor predeterminado\n",
-        "            style={'width': '50%'}\n",
+        "            value=df['age'].min(),  # Default value\n",
+        "            style={'width': '20%'}\n",
         "        ),\n",
-        "        \n",
-        "        # Gráfico de barras para los trabajos correspondientes a la edad seleccionada\n",
-        "        dcc.Graph(id='trabajo', style={'height': '500px'})  # Ajusta la altura según tus necesidades\n",
         "    ], style={'display': 'flex'}),\n",
+        "    \n",
+        "    html.Div([\n",
+        "        # Bar chart for job distribution based on selected age\n",
+        "        dcc.Graph(id='job-bar-chart', style={'height': '500px'})  \n",
+        "    ], style={'display': 'flex', \"width\": \"50%\"}),\n",
+        "    \n",
+        "    html.Div([\n",
+        "        # Scatter plot for balance and duration based on selected job\n",
+        "        dcc.Graph(id='scatter-plot', style={'height': '500px'})  \n",
+        "    ], style={'display': 'flex', \"width\": \"50%\"}),\n",
+        "    \n",
+        "    html.Div([\n",
+        "        # Pie chart for marital status distribution\n",
+        "        dcc.Graph(id='marital-pie-chart', style={'height': '500px'})  \n",
+        "    ], style={'display': 'flex', \"width\": \"50%\"}),\n",
+        "    \n",
+        "    html.Div([\n",
+        "        # Line chart for campaign duration based on selected month\n",
+        "        dcc.Graph(id='line-chart', style={'height': '500px'})  \n",
+        "    ], style={'display': 'flex', \"width\": \"50%\"}),\n",
         "])\n",
         "\n",
-        "# Definir la función de devolución de llamada\n",
+        "# Define the callback function\n",
         "@app.callback(\n",
-        "    Output('trabajo', 'figure'),\n",
-        "    [Input('edad', 'value')]\n",
+        "    Output('job-bar-chart', 'figure'),\n",
+        "    Output('scatter-plot', 'figure'),\n",
+        "    Output('marital-pie-chart', 'figure'),\n",
+        "    Output('line-chart', 'figure'),\n",
+        "    [Input('age-dropdown', 'value')]\n",
         ")\n",
-        "def update_job_distribution(selected_age):\n",
-        "    # Filtrar el DataFrame según la edad seleccionada\n",
+        "def update_visualizations(selected_age):\n",
+        "    # Filter the DataFrame based on the selected age\n",
         "    filtered_df = df[df['age'] == selected_age]\n",
         "    \n",
-        "    # Crear un gráfico de barras para los trabajos\n",
-        "    fig = px.bar(filtered_df['job'].value_counts(), \n",
-        "                 x=filtered_df['job'].value_counts().index, \n",
-        "                 y=filtered_df['job'].value_counts().values,\n",
-        "                 labels={'x': 'Trabajo', 'y': 'Número de Clientes'})\n",
+        "    # Bar chart for job distribution\n",
+        "    job_bar_chart = px.bar(filtered_df['job'].value_counts(), \n",
+        "                           x=filtered_df['job'].value_counts().index, \n",
+        "                           y=filtered_df['job'].value_counts().values,\n",
+        "                           labels={'x': 'Trabajo', 'y': 'Número de clientes'})\n",
         "    \n",
-        "    fig.update_layout(title='Distribución de Trabajos para la Edad: {}'.format(selected_age))\n",
+        "    # Scatter plot for balance and duration based on job\n",
+        "    scatter_plot = px.scatter(filtered_df, x='balance', y='duration', color='job',\n",
+        "                              labels={'balance': 'Balance medio', 'duration': 'Duración'})\n",
         "    \n",
-        "    return fig\n",
+        "    # Pie chart for marital status distribution\n",
+        "    marital_pie_chart = px.pie(filtered_df, names='marital', title='Distribucion de estados civiles')\n",
+        "    \n",
+        "    # Line chart for campaign duration based on month\n",
+        "    line_chart = px.line(filtered_df, x='month', y='campaign', title='Duración de la camapaña por mes')\n",
+        "    \n",
+        "    return job_bar_chart, scatter_plot, marital_pie_chart, line_chart\n",
         "\n",
-        "# Ejecutar la aplicación\n",
         "if __name__ == '__main__':\n",
         "    app.run_server(debug=True)\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
